# WalterLang

./: Cargo.toml  README.md  example.wltr
.github/workflows/: rust.yml
src/: main.rs
walterlang/: Cargo.toml
